[tool.poetry]
name = "vycoder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
ipykernel = "^6.22.0"

[tool.poetry.scripts]
encode = "vycoder.main:encode"
decode = "vycoder.main:decode"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
